wrote codes, added styles

--- a/index.html
+++ b/index.html
@@ -7,38 +7,48 @@
     <link rel="icon" href="images/logo-web.svg" type="web-logo" />
     <!-- Optional: If you want to specify the image for Apple devices -->
     <link rel="apple-touch-icon" href="images/logo-web.svg" />
-    <link rel="stylesheet" href="css/global.css">
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link rel="stylesheet" href="css/global.css" />
+    <link
+      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <header class="header">
       <div class="container">
         <div class="header-elements">
-            <a href="#" class="logo"
-          ><img src="images/logo-web.svg" alt="logo" />
-          <div class="logo-text">
-            <h2>BEST</h2>
-            <span>OFFER DEAL</span>
-          </div></a
-        >
-        <a href="#">Company</a>
-        
-        <div class="hed-phone">
-            <img src="images/icons/phone.svg" alt="phone">
-            <div class="ph-number">
-            <a href="tel:+998 (99) 999-99-99">+998 (99) 999-99-99</a>
-            <a href="tel:+998 (99) 999-99-99">+998 (99) 999-99-99</a>
-            </div>
+          <a href="#" class="logo"
+            ><img src="images/logo-web.svg" alt="logo" />
+            <div class="logo-text"></div
+          ></a>
+          <a class="company" href="#">Company</a>
 
+          <div class="hed-phone">
+            <img src="images/icons/phone.svg" alt="phone" />
+            <div class="ph-number">
+              <a href="tel:+998 (99) 999-99-99">+998 (99) 999-99-99</a>
+              <a href="tel:+998 (99) 999-99-99">+998 (99) 999-99-99</a>
+            </div>
+          </div>
+          <a href="#" class="btn btn-1"
+            >Sign Up <i class="bx bxs-plus-circle"></i
+          ></a>
+          <button class="btn2">Rus</button>
         </div>
-        <a href="#" class="btn btn-1">Sign Up <i class='bx bxs-plus-circle'></i></a>
-         <button class="btn2">Rus</button>
-        </div>
-        
       </div>
     </header>
     <main class="main">
+      <div class="container">
+        <div class="work-with">
+          <span class="line"></span>
+          <p>Work With <span>Best Offer Deal</span></p>
+        </div>
 
+        <div class="inovate-text">
+          <h1>INOVATE SOLUTION FOR <br>
+             BUSINESS <span>SUCCESS</span></h1>
+        </div>
+      </div>
     </main>
   </body>
 </html>
