--- a/index.html
+++ b/index.html
@@ -45,8 +45,28 @@
         </div>
 
         <div class="inovate-text">
-          <h1>INOVATE SOLUTION FOR <br>
-             BUSINESS <span>SUCCESS</span></h1>
+          <h1>
+            INOVATE SOLUTION FOR <br />
+            BUSINESS <span>SUCCESS</span>
+          </h1>
+          <p>
+            We provide services and solutions, and supply any needs to our
+            partners and government institutions. We focus on the best and
+            honest, and promptest services to our clients, and treat our
+            suppliers and partners.
+          </p>
+        </div>
+        <div class="inovate-elements">
+          <a href="#" class="work-together"
+            >Work Together<i class="bx bxs-plus-circle"></i
+          ></a>
+          <div class="call-evr">
+            <div class="call-icon"><img src="/images/icons/phone.svg" alt=""></div>
+            <span
+              >Call Everyday
+              <a class="call" href="tel:+998 (99) 999-99-99">+998 (99) 999-99-99</a></span
+            >
+          </div>
         </div>
       </div>
     </main>
