--- a/index.html
+++ b/index.html
@@ -73,15 +73,199 @@
             </div>
           </div>
         </section>
+
+        <section class="what-v-do2">
+          <span class="what-v-do2__text">
+            <h2>WHAT WE DO?</h2>
+            <h3>
+              Provide consulting services to any type <br />
+              and size clients.
+            </h3>
+            <p>
+              Supply with the highest quality any type of equipment and parts,
+              construction materials and products, office supplies and
+              appliances, household goods and products, machinery and
+              transportation and parts for them
+            </p>
+          </span>
+          <img src="/images/element-img/Group 1.svg" alt="hand" />
+        </section>
+
+        <section class="fast-way">
+          <div class="fast-way__text">
+            <h2>
+              THE FASTEST WAY TO ACHIVE YOUR <span> BUSINESS SUCCESS</span>
+            </h2>
+            <span>
+              <a href="#" class="what-v-do__btn">
+                Work Together <i class="bx bxs-plus-circle"></i
+              ></a>
+            </span>
+          </div>
+          <div class="fast-way__img">
+            <img
+              class="list-dude"
+              src="/images/back-images/Order processed 2.svg"
+              alt="logo"
+            />
+          </div>
+        </section>
+
+        <section class="our-mission">
+          <div class="our-mission__back">
+            <img src="/images/back-images/Group.svg" alt="logo" />
+          </div>
+          <h2>OUR MISSIONS</h2>
+          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+          <div class="our-mission__card-box">
+            <div>
+              <img src="/images/icons/Group_fill.svg" alt="icon" />
+              <span>
+                <h3>Provide consulting</h3>
+                <p>
+                  We provide services and solutions, and supply any needs to our
+                  partners and government institutions. We focus on the best and
+                  honest, and promptest services to our clients, and treat our
+                  suppliers and partners.
+                </p>
+              </span>
+            </div>
+            <div>
+              <img src="/images/icons/Safe.svg" alt="icon" />
+              <span>
+                <h3>Safe deal & Transaction</h3>
+                <p>
+                  In every transaction we undertake, we prioritize the
+                  implementation of comprehensive security measures and thorough
+                  verification processes, ensuring that each deal is conducted
+                  with the utmost safety and reliability.
+                </p>
+              </span>
+            </div>
+            <div>
+              <img src="/images/icons/Idea.svg" alt="icon" />
+              <span>
+                <h3>Services & Solutions</h3>
+                <p>
+                  Supply with the highest quality any type of equipment and
+                  parts, construction materials and products, office supplies
+                  and appliances, household goods and products, machinery and
+                  transportation and parts for them
+                </p>
+              </span>
+            </div>
+            <div>
+              <img src="/images/icons/Group_fill.svg" alt="icon" />
+              <span>
+                <h3>Provide consulting</h3>
+                <p>
+                  Supply with the highest quality any type of equipment and
+                  parts, construction materials and products, office supplies
+                  and appliances, household goods and products, machinery and
+                  transportation and parts for them
+                </p>
+              </span>
+            </div>
+          </div>
+        </section>
+
+        <section class="lets-get">
+          <h2>LET'S GET STARTED</h2>
+          <p>Sign Up into system to start</p>
+          <div class="lets-get__buttons">
+            <button>Sign Up</button>
+            <button>Log In</button>
+            <button>Supplier</button>
+            <button>Customer</button>
+          </div>
+
+          <div class="lets-get__inputs-box">
+            <div class="email-input">
+              <label class="lets-get__labels" for="emai">E-mail</label>
+              <input
+                class="lets-get__inputs"
+                type="email"
+                id="email"
+                name="email"
+                required
+                placeholder="emailexamplehere@gmail.com"
+              />
+            </div>
+
+            <div class="sell-input">
+              <label class="lets-get__labels" for="what-do-u-sell"
+                >What do you Sell?</label
+              >
+              <input
+                class="lets-get__inputs"
+                type="text"
+                id="product-name"
+                required
+                placeholder="ex. Chair, furnutures"
+              />
+            </div>
+
+            <div class="number-input">
+              <label class="lets-get__labels2" for="phone-number"
+                >Phone Number</label
+              >
+              <input
+                class="lets-get__inputs"
+                type="tel"
+                class="input-field"
+                placeholder="Enter phone number"
+                pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}"
+                title="Phone number must be in the format XXX-XXX-XXXX"
+                required
+                id="number"
+              />
+            </div>
+
+            <div class="file-input-container">
+              <input
+                class="file-input"
+                type="file"
+                name="file"
+                id="certificate"
+                accept=".pdf, .doc, .docx"
+                required
+              />
+              <span class="lets-get__labels3"
+                >Upload your certificate
+                <p>(PDF, DOC, DOCX)</p></span
+              >
+              <label for="certificate" class="file-input-button"
+                >Choose File</label
+              >
+            </div>
+          </div>
+        </section>
       </main>
     </div>
+    <footer>
+      <img class="footer" src="/images/back-images/union.svg" alt="logo" />
+      <div class="container">
+        <div class="footer-elements">
+          <div>
+            <a href="#"
+              ><img src="/images/back-images/White-logo.png" alt="logo" /><img
+                src="/images/back-images/white-text-logo.png"
+                alt=""
+            /></a>
+            <span>
+              <h3>Contact</h3>
+              <a href="#">someemailhere@mail.com</a>
+              <a href="tel: +998(90)9999999">+998 (90) 999-99-99</a>
+              <a href="tel: +998(90)9999999">+998 (90) 999-99-99</a>
+            </span>
+          </div>
+          <h5>©2023 <big>Best Offer Deal</big> all rights reserved</h5>
+        </div>
+      </div>
+    </footer>
+
     <div class="back-img">
-      <img src="/images/back-images/union.svg" alt="logo" />
-      <img
-        class="list-dude"
-        src="/images/back-images/Order processed 2.svg"
-        alt="logo"
-      />
+      <img class="wave" src="/images/back-images/union.svg" alt="logo" />
     </div>
   </body>
 </html>
