--- a/index.html
+++ b/index.html
@@ -42,8 +42,9 @@
         </section>
       </div>
     </header>
-    <div class="container">
-      <main class="main">
+
+    <main class="main">
+      <div class="container">
         <section class="what-v-do">
           <span>
             <div class="what-v-do__line"></div>
@@ -73,24 +74,31 @@
             </div>
           </div>
         </section>
+      </div>
 
-        <section class="what-v-do2">
-          <span class="what-v-do2__text">
-            <h2>WHAT WE DO?</h2>
-            <h3>
-              Provide consulting services to any type <br />
-              and size clients.
-            </h3>
-            <p>
-              Supply with the highest quality any type of equipment and parts,
-              construction materials and products, office supplies and
-              appliances, household goods and products, machinery and
-              transportation and parts for them
-            </p>
-          </span>
-          <img src="/images/element-img/Group 1.svg" alt="hand" />
-        </section>
-
+      <section class="what-v-do2">
+        <div class="wave-back">
+          <div class="container">
+            <div class="what-v-do2_elements">
+              <span class="what-v-do2__text">
+                <h2>WHAT WE DO?</h2>
+                <h3>
+                  Provide consulting services to any type <br />
+                  and size clients.
+                </h3>
+                <p>
+                  Supply with the highest quality any type of equipment and
+                  parts, construction materials and products, office supplies
+                  and appliances, household goods and products, machinery and
+                  transportation and parts for them
+                </p>
+              </span>
+              <img src="/images/element-img/Group 1.svg" alt="hand" />
+            </div>
+          </div>
+        </div>
+      </section>
+      <div class="container">
         <section class="fast-way">
           <div class="fast-way__text">
             <h2>
@@ -240,8 +248,8 @@
             </div>
           </div>
         </section>
-      </main>
-    </div>
+      </div>
+    </main>
     <footer>
       <img class="footer" src="/images/back-images/union.svg" alt="logo" />
       <div class="container">
@@ -263,9 +271,5 @@
         </div>
       </div>
     </footer>
-
-    <div class="back-img">
-      <img class="wave" src="/images/back-images/union.svg" alt="logo" />
-    </div>
   </body>
 </html>
