fix bugs index.html
dont forget to pull from git hub before pushing

--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
       <div class="container">
         <section class="header-elem">
           <a href="#" class="header-elem__logo">
-            <img src="/images/logo-web.svg" alt="logo" />
-            <img src="/images/logo-text.svg" alt="text" />
+            <img src="images/logo-web.svg" alt="logo" />
+            <img src="images/logo-text.svg" alt="text" />
           </a>
           <a href="#" class="company">Company</a>
           <div class="phone-box">
             <a href="tel: +998(90)9999999">
               <img
                 class="phone-box__icon"
-                src="/images/icons/phone.svg"
+                src="images/icons/phone.svg"
                 alt="icon"
               />
             </a>
@@ -66,7 +66,7 @@
               Work Together <i class="bx bxs-plus-circle"></i
             ></a>
             <div class="what-v-do__numbers">
-              <img src="/images/icons/phone.svg" alt="icon" />
+              <img src="images/icons/phone.svg" alt="icon" />
               <span class="what-v-do__tell">
                 <p>Call Everyday</p>
                 <a href="tel: +998(90)9999999">+998 (90) 999-99-99</a>
@@ -93,7 +93,7 @@
                   transportation and parts for them
                 </p>
               </span>
-              <img src="/images/element-img/Group 1.svg" alt="hand" />
+              <img src="images/element-img/Group 1.svg" alt="hand" />
             </div>
           </div>
         </div>
@@ -113,7 +113,7 @@
           <div class="fast-way__img">
             <img
               class="list-dude"
-              src="/images/back-images/Order processed 2.svg"
+              src="images/back-images/Order processed 2.svg"
               alt="logo"
             />
           </div>
@@ -121,13 +121,13 @@
 
         <section class="our-mission">
           <div class="our-mission__back">
-            <img src="/images/back-images/Group.svg" alt="logo" />
+            <img src="images/back-images/Group.svg" alt="logo" />
           </div>
           <h2>OUR MISSIONS</h2>
           <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
           <div class="our-mission__card-box">
             <div>
-              <img src="/images/icons/Group_fill.svg" alt="icon" />
+              <img src="images/icons/Group_fill.svg" alt="icon" />
               <span>
                 <h3>Provide consulting</h3>
                 <p>
@@ -139,7 +139,7 @@
               </span>
             </div>
             <div>
-              <img src="/images/icons/Safe.svg" alt="icon" />
+              <img src="images/icons/Safe.svg" alt="icon" />
               <span>
                 <h3>Safe deal & Transaction</h3>
                 <p>
@@ -151,7 +151,7 @@
               </span>
             </div>
             <div>
-              <img src="/images/icons/Idea.svg" alt="icon" />
+              <img src="images/icons/Idea.svg" alt="icon" />
               <span>
                 <h3>Services & Solutions</h3>
                 <p>
@@ -163,7 +163,7 @@
               </span>
             </div>
             <div>
-              <img src="/images/icons/Group_fill.svg" alt="icon" />
+              <img src="images/icons/Group_fill.svg" alt="icon" />
               <span>
                 <h3>Provide consulting</h3>
                 <p>
@@ -251,14 +251,14 @@
       </div>
     </main>
     <footer>
-      <img class="footer" src="/images/back-images/union.svg" alt="logo" />
+      <img class="footer" src="images/back-images/union.svg" alt="logo" />
       <div class="container">
         <div class="footer-elements">
           <div>
             <a href="#"
-              ><img src="/images/back-images/White-logo.png" alt="logo" /><img
-                src="/images/back-images/white-text-logo.png"
-                alt=""
+              ><img src="images/back-images/White-logo.png" alt="logo" /><img
+                src="images/back-images/white-text-logo.png"
+                alt="logo"
             /></a>
             <span>
               <h3>Contact</h3>
