added adaptive 1220px everything works dont forget to make for 1240

--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
             </div>
 
             <div class="number-input">
-              <label class="lets-get__labels2" for="phone-number"
+              <label class="lets-get__labels" for="phone-number"
                 >Phone Number</label
               >
               <input
@@ -238,7 +238,7 @@
                 accept=".pdf, .doc, .docx"
                 required
               />
-              <span class="lets-get__labels3"
+              <span class="lets-get__labels"
                 >Upload your certificate
                 <p>(PDF, DOC, DOCX)</p></span
               >
