--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header>
       <div class="container">
         <section class="header-elem">
-          <a href="#" class="header-elem__logo">
+          <a href="index.html" class="header-elem__logo">
             <img src="images/logo-web.svg" alt="logo" />
             <img src="images/logo-text.svg" alt="text" />
           </a>
@@ -35,7 +35,10 @@
               <a href="tel: +998(90)9999999">+998 (90) 999-99-99</a>
             </span>
           </div>
-          <a href="#" class="header-elem__btn">
+          <a
+            href="pages/registrations/create-account.html"
+            class="header-elem__btn"
+          >
             Sign Up <i class="bx bxs-plus-circle"></i
           ></a>
           <a href="#" class="header-elem__btn">Rus</a>
@@ -62,7 +65,10 @@
             suppliers and partners.
           </p>
           <div class="what-v-do__elements">
-            <a href="#" class="what-v-do__btn">
+            <a
+              href="pages/registrations/create-account.html"
+              class="what-v-do__btn"
+            >
               Work Together <i class="bx bxs-plus-circle"></i
             ></a>
             <div class="what-v-do__numbers">
@@ -105,7 +111,10 @@
               THE FASTEST WAY TO ACHIVE YOUR <span> BUSINESS SUCCESS</span>
             </h2>
             <span>
-              <a href="#" class="what-v-do__btn">
+              <a
+                href="pages/registrations/create-account.html"
+                class="what-v-do__btn"
+              >
                 Work Together <i class="bx bxs-plus-circle"></i
               ></a>
             </span>
